samples/_failures_safe/1761376022_6b80d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a134eae.c: In function ‘get_token’:
./samples/SAFE/__tmp_7a134eae.c:139:13: error: expected identifier at end of input
  139 |             lexer->
      |             ^~~~~
./samples/SAFE/__tmp_7a134eae.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a134eae.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a134eae.c:139:13: error: expected declaration or statement at end of input
